// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingCard > renders basic case correctly 1`] = `
"<div data-v-d222b683="" style="--x: 0px; --y: 0px;" class="relative group isolate rounded-xl background-gradient ring-1 ring-gray-200 dark:ring-gray-800 before:hidden before:lg:block before:absolute before:-inset-[2px] before:h-[calc(100%+4px)] before:w-[calc(100%+4px)] before:z-[-1] before:rounded-[13px] flex-1 flex flex-col shadow">
  <div data-v-d222b683="" class="flex-1 flex flex-col overflow-hidden rounded-xl divide-y divide-gray-200 dark:divide-gray-800 bg-white dark:bg-gray-900 hover:bg-opacity-90 dark:hover:bg-opacity-90 transition-[background-opacity]">
    <!--v-if-->
    <div class="gap-x-8 gap-y-4 rounded-xl flex-1 flex flex-col px-4 py-5 sm:p-6">
      <div data-v-d222b683="" class="">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`LandingCard > renders with props correctly 1`] = `
"<div data-v-d222b683="" style="--x: 0px; --y: 0px;" class="relative group isolate rounded-xl background-gradient ring-1 ring-gray-200 dark:ring-gray-800 before:hidden before:lg:block before:absolute before:-inset-[2px] before:h-[calc(100%+4px)] before:w-[calc(100%+4px)] before:z-[-1] before:rounded-[13px] flex-1 flex flex-col shadow">
  <div data-v-d222b683="" class="flex-1 flex flex-col overflow-hidden rounded-xl divide-y divide-gray-200 dark:divide-gray-800 bg-white dark:bg-gray-900 hover:bg-opacity-90 dark:hover:bg-opacity-90 transition-[background-opacity]">
    <!--v-if-->
    <div class="gap-x-8 gap-y-4 rounded-xl flex-1 flex flex-col px-4 py-5 sm:p-6">
      <div data-v-d222b683="" class="">
        <!--v-if-->
        <div data-v-d222b683="" class="mb-2 pointer-events-none"><span data-v-d222b683="" class="i-heroicons-map w-8 h-8 flex-shrink-0 text-gray-900 dark:text-white"></span></div>
        <p data-v-d222b683="" class="text-gray-900 dark:text-white text-base font-bold truncate">Title</p>
        <p data-v-d222b683="" class="text-[15px] text-gray-500 dark:text-gray-400 mt-1">Description</p>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`LandingCard > renders with slots correctly 1`] = `
"<div data-v-d222b683="" style="--x: 0px; --y: 0px;" class="relative group isolate rounded-xl background-gradient ring-1 ring-gray-200 dark:ring-gray-800 before:hidden before:lg:block before:absolute before:-inset-[2px] before:h-[calc(100%+4px)] before:w-[calc(100%+4px)] before:z-[-1] before:rounded-[13px] flex-1 flex flex-col shadow">
  <div data-v-d222b683="" class="flex-1 flex flex-col overflow-hidden rounded-xl divide-y divide-gray-200 dark:divide-gray-800 bg-white dark:bg-gray-900 hover:bg-opacity-90 dark:hover:bg-opacity-90 transition-[background-opacity]">
    <!--v-if-->
    <div class="gap-x-8 gap-y-4 rounded-xl flex-1 flex flex-col px-4 py-5 sm:p-6">
      <div data-v-d222b683="" class="">
        <!--v-if-->
        <div data-v-d222b683="" class="mb-2 pointer-events-none">Icon slot</div>
        <p data-v-d222b683="" class="text-gray-900 dark:text-white text-base font-bold truncate">Title slot</p>
        <p data-v-d222b683="" class="text-[15px] text-gray-500 dark:text-gray-400 mt-1">Description slot</p>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
